--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     api 'com.just.agentweb:agentweb:4.1.2'
     implementation 'com.hyman:flowlayout-lib:1.1.2'
+    implementation 'org.litepal.android:java:3.0.0'
 }
