--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-        <activity android:name=".Search.SearchListActivity"></activity>
+        <activity android:name=".Knowledge.Activity.KnowledgeListActivity"></activity>
+        <activity android:name=".Search.SearchListActivity" />
         <activity android:name=".Search.SearchActivity" />
         <activity android:name=".CommonWeb.Activity.CommonWebActivity" />
         <activity android:name=".main.ArticleDetailActivity" />
