--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     api 'com.just.agentweb:agentweb:4.1.2'
     implementation 'com.hyman:flowlayout-lib:1.1.2'
     implementation 'org.litepal.android:java:3.0.0'
+    implementation 'q.rorbin:VerticalTabLayout:1.2.5'
 }
